--- a/local/proxy.ini
+++ b/local/proxy.ini
@@ -8,7 +8,8 @@ debuginfo = 0
 
 [gae]
 enable = 1
-appid = wallcocotest|wallcocotest2|wallcocotest3|wallcocotest4
+;appid = wallcocotest|wallcocotest2|wallcocotest3|wallcocotest4
+appid = koolodod1|koolodod2|koolodod3|koolodod4
 password = 654321
 path = /_gh/
 mode = https
